--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "fs package extension function",
   "main": "index.js",
   "scripts": {
-    "test": " "
+    "test": "node test/extend.test.js"
   },
   "repository": {
     "type": "git",
